# 20201_ivanov

./: .gitignore  README.md
cpp/0lab/: compile.sh  main.cpp
cpp/WIreWorld2D/: .WireWorldWindow.cpp.swp  CMakeLists.txt  Field.h  FieldArea.cpp  FieldArea.h  FieldWidget.cpp  FieldWidget.h  Game.h  Game2D.h  Game2DQt.h  GameLife.cpp  GameLife.h  GameLife2D.cpp  GameLife2D.h  GameLifeQt.cpp  GameLifeQt.h  GameLifeQt2D.h  GameQt.h  GamesIDs.h  MainWindow.cpp  MainWindow.h  Makefile  ParserRLE.h  RLE.cpp  RLE.h  RLE_WireWorld.cpp  RLE_WireWorld.h  Runner.cpp  Runner.h  RunnerWireWorld.cpp  RunnerWireWorld.h  VectorField.h  WireWorld.c  WireWorld.cpp  WireWorld.h  WireWorld2D.cbp  WireWorld2D.cpp  WireWorld2D.h  WireWorldFieldTypes.h  WireWorldQt.cpp  (+14 more)
cpp/cellular_automation/: Factory.h  FieldWidget.cpp  Game.h  GameLife.cpp  (+4 more)
cpp/prisoner's_dilemma/: AlwaysCoopStrategy.cpp  AlwaysCoopStrategy.h  AlwaysCoopStrategy.h.gch  AlwaysDefStrategy.cpp  AlwaysDefStrategy.h  AlwaysDefStrategy.h.gch  CMakeLists.txt  Controller.cpp  Controller.h  Factory.cpp  Factory.h  Factory.h.gch  MetaStrategy.cpp  MetaStrategy.h  MostFreqStrategy.cpp  MostFreqStrategy.h  MostFreqStrategy.h.gch  PredictionStrategy.cpp  PredictionStrategy.h  PrisonerDilemmaUnitTests.cpp  PrisonerDilemmaUnitTests.h  RandomStrategy.cpp  RandomStrategy.h  RandomStrategy.h.gch  Runner.cpp  Runner.h  RunnerIO.cpp  RunnerIO.h  RunnerTypesAndConstants.h  Strategy.cpp  Strategy.h  Strategy.h.gch  StrategyTypesAndConstants.h  compile.sh  configs.txt  default_matrix.txt  main.cpp  main_tests.cpp  pris_dil  test_compile.sh
(+506 files in other folders)
